--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 <div class="third">
 
   <div class="container-fluid">
-    <img class="last-image" src="images/logo.svg" alt="last-img">
+    <img class="logo-2" src="images/logo0.svg" alt="last-img">
 <div class="foot">
   <div>
       <ul>
         <li>
-          <img class="icon" src="images/icon-location.svg" alt="location">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua
+          <p><img class="icon" src="images/icon-location.svg" alt="location"> Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor  incididunt ut labore et dolore magna aliqua </p>
         </li>
           <li>
               <img class="icon" src="images/icon-phone.svg" alt="phone"> +1-543-123-4567
@@ -114,10 +114,14 @@
         <li>About Us</li>
         <li>What we do</li>
         <li>FAQ</li>
-        <li> Career</li>
-        <li> Blog</li>
-        <li> Contact Us</li>
       </ul>
+  </div>
+  <div>
+    <ul>
+      <li> Career</li>
+      <li> Blog</li>
+      <li> Contact Us</li>
+    </ul>
   </div>
   <div>
     <ul>
@@ -128,12 +132,15 @@
   </div>
 </div>
 </div>
-  &copy; Copyright 2018 Huddle. All rights reserved.
+
+<div class="copyright">
+    &copy; Copyright 2018 Huddle. All rights reserved.
+</div>
 
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Mohi Mishra</a>.
     </p>
   </footer>
   </div>
