--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div class="first">
       <img class="logo" src="images/logo.svg" alt="logo">
-      <button class="one" type="button" name=""><b>Try It Free</b></button>
+      <button class="one" type="button" ><b>Try It Free</b></button>
 
   <div class="header-content">
     <div class="header-text">
